ViSP 2.1.2 (Modification since ViSP 2.1.1)
  - Installation
	- Standardization of makefile targets (clean, distclean, install,
	  uninstall). Take into account configure --prefix option in
	  installation process
  - Shared Library
	- add compilation rules for the creation of lib/libvisp-2.so
  - New Feature
	- add control for Directed Perception ptu-46 pan-tilt turret
  - Bug fix and improvement
	- vp1394Grabber settings (format, mode, framerate, shutter, gain)
	- vpDot (Moment computation)
----------------------------------------------	
ViSP 2.1.1 (released January, 6th 2006)
   - New examples 
	- create an example directory
	- add vpDotExample.cpp  
	- add vpDot2Example.cpp  
	- add vpPoseExample.cpp 
	- add 2D0.5.VisualServoingSimulation.cpp 
  - New Feature
	- add this ChangleLog file
	- add a vpDisplayGTK class with the GTK2+ window system
	- new member function in vpDisplay (_uv)
	- add function getInteractionMatrix() in vpGenericFeature
  - Specification modifications
	- change the vpDot and vpDot2 specifications
	- supress demo directory
  - Bug fix and improvement
	- add a runtime warning when vpGenericFeature is not correctly used
	- comment in english in vpDisplayX
	- suppress a trace in vpPoseVirtualVisualServoing.cpp
	- directory.mk : add -p option to mkdir
	- improve XP compatibility
	- in vp1394Grabber, latency and memory leaks suppression
  - WWW
     - add an image sequence to download on the www site cube.tar.gz


---------------------------------------	
ViSP 2.1.0 (released October, 24th 2005)